<resources>
    <string name="app_name">Mum</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="slash">/</string>


    <string name="profile_name">なまえ</string>
    <string name="profile_gender">性別</string>
    <string name="profile_male">男の子</string>
    <string name="profile_female">女の子</string>
    <string name="profile_birthday">誕生日</string>
    <string name="profile_birthday_sample">2000/1/1</string>
    <string name="profile_edit_button">入力</string>
    <string name="profile_blood_type">血液型</string>
    <string name="profile_blood_a">A</string>
    <string name="profile_blood_b">B</string>
    <string name="profile_blood_o">O</string>
    <string name="profile_blood_ab">AB</string>
    <string name="profile_blood_unknown">不明</string>
    <string name="profile_constellation">星座</string>
    <string name="profile_height_weight">生まれたときの身長と体重</string>
    <string name="profile_height">cm</string>
    <string name="profile_weight">g</string>
    <string name="profile_taurus">星座が入るよ</string>
    <string name="menu_profile">赤ちゃんプロフィール</string>
    <string name="menu_calendar">フォトカレンダー</string>
    <string name="menu_detail">今日の一枚</string>
    <string name="menu_settings">設定</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


</resources>
