<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.app.strkita.mum.ProfileFragment"
    android:background="@color/colorBackground"
    tools:showIn="@layout/app_bar_main">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/profile_top_margin"
        android:layout_weight="1"
        android:scaleType="centerCrop"
        android:layout_gravity="center"
        android:src="@drawable/baby"/>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:layout_marginTop="@dimen/profile_between_margin_narrow"
        android:layout_marginStart="@dimen/activity_horizontal_margin">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/profile_between_margin"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:layout_width="@dimen/profile_label_width"
                android:layout_height="wrap_content"
                android:text="@string/profile_name"/>

            <EditText
                android:id="@+id/editName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/profile_end_margin"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/profile_between_margin"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:layout_width="@dimen/profile_label_width"
                android:layout_height="wrap_content"
                android:text="@string/profile_gender"/>

            <RadioGroup
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/profile_end_margin">

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/profile_male"
                    android:layout_marginEnd="@dimen/profile_radio_width"/>
                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/profile_female"/>
            </RadioGroup>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/profile_between_margin"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:layout_width="@dimen/profile_label_width"
                android:layout_height="wrap_content"
                android:text="@string/profile_blood_type"/>

            <RadioGroup
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/profile_end_margin">
                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/profile_blood_a"
                    android:paddingEnd="@dimen/profile_radio_width"/>
                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/profile_blood_b"
                    android:paddingEnd="@dimen/profile_radio_width"/>
                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:paddingEnd="@dimen/profile_radio_width"
                    android:text="@string/profile_blood_o"/>
                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:paddingEnd="@dimen/profile_radio_width"
                    android:text="@string/profile_blood_ab"/>
                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/profile_blood_unknown"/>
            </RadioGroup>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/profile_between_margin_narrow"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:layout_width="@dimen/profile_label_width"
                android:layout_height="wrap_content"
                android:text="@string/profile_birthday"/>

            <EditText
                android:id="@+id/editBirthday"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:focusable="false"
                android:onClick="onClickSetBirthday"
                android:textSize="@dimen/profile_text_large"
                android:hint="@string/profile_birthday_sample"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/profile_between_margin"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:layout_gravity="center_vertical">

            <TextView
                android:layout_width="@dimen/profile_label_width"
                android:layout_height="wrap_content"
                android:text="@string/profile_constellation"/>

            <TextView
                android:id="@+id/editConstellation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/profile_taurus"
                android:layout_marginEnd="@dimen/profile_end_margin"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/profile_between_margin_wide"
            android:gravity="center_vertical"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/profile_height_weight"/>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:paddingTop="@dimen/profile_between_margin_narrow"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/editHeight"
                    android:layout_width="@dimen/profile_edit_width"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:layout_marginStart="@dimen/profile_label_width"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/profile_height"/>

                <EditText
                    android:id="@+id/editWeight"
                    android:layout_width="@dimen/profile_edit_width"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:layout_marginStart="@dimen/profile_top_margin"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/profile_weight"/>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>